--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "divewithkevin",
+  "name": "parason",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -9,8 +9,9 @@
     "compile:sass": "node-sass sass/main.scss css/styles.comp.css",
     "prefix:css": "postcss --use autoprefixer -b \"last 10 versions \" css/styles.comp.css -o css/styles.prefix.css ",
     "compress:css": "node-sass css/styles.prefix.css css/styles.css --output-style compressed",
-    "compress:js": "uglifyjs js/main.js -c -o js/main.min.js",
-    "build": "npm-run-all compile:sass prefix:css compress:css compress:js"
+    "concat:js":"node index.js",
+    "compress:js": "uglifyjs js/main.concat.js -c -o js/main.min.js",
+    "build": "npm-run-all compile:sass prefix:css compress:css concat:js compress:js"
   },
   "author": "Kevin Armijo",
   "license": "ISC",
